# pierre_mcp_server

./: .env.example  .env.postgres.example  .envrc.example  .gitignore  .gitmodules  .mcp.json  AGENTS.md  BRIDGE_TEST_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DATABASE_REFACTORING_REVIEW.md  DOCUMENTATION_GAPS.md  Dockerfile  MULTITENANT_MCP_SUMMARY.md  PLAN.md  README.md  SECURITY.md  TUTORIAL_REVIEW_REPORT.md  build.rs  check_methods.sh  claude-desktop-config.json  claude_app_config.json  clippy.toml  database_provider_impl.rs  deny.toml  docker-compose.postgres.yml  docker-compose.redis.yml  docker-compose.yml  libphysiological_constants.rlib  llms.txt  mcp-auth-proxy.js  package.json  rust-toolchain.toml  test_bridge_get_activities.js  test_get_activities.sh  test_mcp_deserialize.rs  test_trial_keys.sh  token_output.txt
.cargo/: config.toml.example
.claude/: CLAUDE.md  README.md  frontend-style-guide.md  settings.json
.githooks/: commit-msg  pre-commit  pre-push
benches/: cache_bench.rs  database_bench.rs  database_benchmarks.rs  intelligence_bench.rs  serialization_bench.rs
book/: book.toml
claude_docs/: OPTION_B_TODO.md  SESSION_SUMMARY.md  STATUS.md  implementation_plan.md  reality_check.md  sonnet_analysis.md
crates/pierre-core/: Cargo.toml  clippy.toml
crates/pierre-core/src/: lib.rs  pagination.rs
crates/pierre-core/src/admin/: mod.rs
crates/pierre-core/src/config/: fitness.rs  mod.rs  profiles.rs
crates/pierre-core/src/constants/: cache.rs  mod.rs  units.rs
crates/pierre-core/src/constants/oauth/: mod.rs  providers.rs
crates/pierre-core/src/constants/protocol/: constants.rs
crates/pierre-core/src/constants/tools/: mod.rs
crates/pierre-core/src/errors/: database.rs  mod.rs  protocol.rs  provider.rs  tool.rs
crates/pierre-core/src/formatters/: mod.rs
crates/pierre-core/src/intelligence/: insight_sharing_policy.rs  mod.rs
crates/pierre-core/src/intelligence/algorithms/: mod.rs
crates/pierre-core/src/models/: activity.rs  api_key.rs  athlete.rs  audit.rs  conversation.rs  health.rs  key_rotation.rs  mod.rs  nutrition.rs  oauth.rs  oauth2_server.rs  sleep.rs  social.rs  sport.rs  tenant.rs  tool_selection.rs  user.rs  user_mcp_token.rs
crates/pierre-intelligence/: Cargo.toml
crates/pierre-intelligence/src/: activity_analyzer.rs  analysis_config.rs  analyzer.rs  friend_activity_cache.rs  goal_engine.rs  insights.rs  lib.rs  metrics.rs  metrics_extractor.rs  nutrition_calculator.rs  pattern_detection.rs  performance_analyzer.rs  performance_analyzer_v2.rs  performance_prediction.rs  recommendation_engine.rs  recovery_calculator.rs  sleep_analysis.rs  training_load.rs  visitor.rs
crates/pierre-intelligence/src/algorithms/: maxhr.rs  recovery_aggregation.rs  trimp.rs  tss.rs
crates/pierre-intelligence/src/config/: mod.rs
crates/pierre-intelligence/src/config/intelligence/: activity.rs  metrics.rs  mod.rs  nutrition.rs  recommendation.rs  sleep_recovery.rs  training_zones.rs  vo2_max.rs
crates/pierre-intelligence/src/recipes/: conversion.rs  models.rs
crates/pierre-providers/: Cargo.toml
crates/pierre-providers/src/: activity_iterator.rs  circuit_breaker.rs  core.rs  coros_provider.rs  fitbit_provider.rs  garmin_provider.rs  http_client.rs  lib.rs  spi.rs  strava_provider.rs  utils.rs  whoop_provider.rs
crates/pierre-providers/src/terra/: api_client.rs  constants.rs  converters.rs  mod.rs  provider.rs  webhook.rs
examples/agents/agent_discovery/: Cargo.toml  README.md
examples/agents/agent_discovery/src/: main.rs
examples/agents/fitness_analyzer/: .env.example  Cargo.toml  README.md  run.sh
examples/agents/fitness_analyzer/src/: a2a_client.rs  analyzer.rs  config.rs  lib.rs  main.rs  scheduler.rs
examples/agents/fitness_analyzer/tests/: integration_tests.rs  unit_tests.rs
pierre-fitness-app/: Cargo.toml
pierre-fitness-app/src/: lib.rs  main.rs  models.rs
pierre-fitness-app/src/config/: fitness_config.rs  intelligence_config.rs  mod.rs
pierre-fitness-app/src/handlers/: fitness_api.rs  goals.rs  intelligence.rs  mod.rs  nutrition.rs  provider_helpers.rs  sleep_recovery.rs
pierre-fitness-app/src/intelligence/: activity_analyzer.rs  analysis_config.rs  goal_engine.rs  insights.rs  location.rs  metrics.rs  metrics_extractor.rs  mod.rs  nutrition_calculator.rs  performance_analyzer.rs  performance_analyzer_v2.rs  performance_prediction.rs  physiological_constants.rs  recommendation_engine.rs  recovery_calculator.rs  sleep_analysis.rs  statistical_analysis.rs  training_load.rs  weather.rs
pierre-fitness-app/src/intelligence/algorithms/: ftp.rs  lthr.rs  maxhr.rs  mod.rs  recovery_aggregation.rs  training_load.rs  trimp.rs  tss.rs  vdot.rs  vo2max.rs
pierre-fitness-app/src/models/: mod.rs
pierre-fitness-app/src/providers/: core.rs  mod.rs
pierre-fitness-app/tests/: analysis_config_test.rs  configuration_e2e_test.rs  configuration_validation_test.rs  configuration_vo2_max_test.rs  e2e_tenant_onboarding_test.rs  enhanced_data_models_test.rs  fitness_api_test.rs  intelligence_algorithms_test.rs  intelligence_comprehensive_test.rs  intelligence_config_test.rs  intelligence_recovery_calculator_test.rs  intelligence_sleep_analysis_test.rs  intelligence_test.rs  intelligence_tools_advanced_test.rs  intelligence_tools_basic_test.rs  intelligence_universal_integration_test.rs  intelligence_weather_test.rs  metrics_extractor_test.rs  models_test.rs  nutrition_comprehensive_test.rs  oauth_token_refresh_test.rs  pattern_detection_test.rs  performance_prediction_test.rs  protocols_universal_edge_cases_test.rs  sleep_algorithms_test.rs  sleep_recovery_integration_test.rs  statistical_analysis_test.rs  test_all_tools.rs  training_load_test.rs  vdot_table_verification_test.rs
pierre-fitness-app/tests/helpers/: mod.rs  synthetic_data.rs  test_utils.rs
pierre-fitness-providers/: Cargo.toml
pierre-fitness-providers/src/: lib.rs
pierre-fitness-providers/src/garmin/: mod.rs  provider.rs
pierre-fitness-providers/src/strava/: mod.rs  provider.rs
pierre-fitness-providers/src/synthetic/: mod.rs  provider.rs
(+1886 files in other folders)
