[package]
name = "pierre_mcp_server"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pierre Fitness API - Multi-protocol fitness data API for LLMs (MCP + A2A)"
repository = "https://github.com/jfarcand/pierre_mcp_server"
keywords = ["mcp", "fitness", "strava", "api", "claude"]
categories = ["api-bindings", "web-programming"]

[lib]
name = "pierre_mcp_server"
path = "src/lib.rs"

[[bin]]
name = "pierre-mcp-server"
path = "src/bin/pierre-mcp-server.rs"

# [[bin]]
# name = "auth-setup"
# path = "src/bin/auth_setup.rs"

[[bin]]
name = "admin-setup"
path = "src/bin/admin_setup.rs"

[[bin]]
name = "diagnose-weather-api"
path = "src/bin/diagnose_weather_api.rs"

[[bin]]
name = "serve-docs"
path = "src/bin/serve_docs.rs"



[features]
default = ["sqlite"]
sqlite = []
postgresql = ["sqlx/postgres"]
testing = []

[profile.dev]
debug = 1
opt-level = 0
overflow-checks = true

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-lto]
inherits = "release"
lto = "fat"

[dependencies]
tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "net", "time", "fs", "signal", "io-std", "io-util", "sync"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std", "registry", "json"], default-features = false }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
url = "2.5"
clap = { version = "4.5", features = ["derive", "std"], default-features = false }
dotenvy = "0.15"
toml = "0.8"
dirs = "5.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
urlencoding = "2.1"
sha2 = "0.10"
rand = "0.8"
aes-gcm = "0.10"
# Encryption and database support for multi-tenant
ring = "0.17"
ed25519-dalek = "2.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "uuid", "derive"], default-features = false }
bcrypt = "0.16"
jsonwebtoken = "9.3"
subtle = "2.6"
warp = { version = "0.3", features = ["websocket"], default-features = false }
futures-util = "0.3"
# Pin to compatible version to avoid edition2024 requirement
base64ct = "=1.6.0"
# For documentation server
env_logger = "0.11"

[dev-dependencies]
tempfile = "3.20"
serial_test = "3.1"