[package]
name = "pierre_mcp_server"
version = "0.2.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Pierre Fitness API - Multi-protocol fitness data API for LLMs (MCP + A2A)"
repository = "https://github.com/Async-IO/pierre_mcp_server"
keywords = ["mcp", "fitness", "strava", "api", "claude"]
categories = ["api-bindings", "web-programming"]

[lib]
name = "pierre_mcp_server"
path = "src/lib.rs"

[[bin]]
name = "pierre-mcp-server"
path = "src/bin/pierre-mcp-server.rs"

# [[bin]]
# name = "auth-setup"
# path = "src/bin/auth_setup.rs"

[[bin]]
name = "admin-setup"
path = "src/bin/admin_setup.rs"

[[bin]]
name = "diagnose-weather-api"
path = "src/bin/diagnose_weather_api.rs"

[[bin]]
name = "serve-docs"
path = "src/bin/serve_docs.rs"







[features]
default = ["sqlite"]
sqlite = []
postgresql = ["sqlx/postgres"]
testing = []
telemetry = []

[profile.dev]
debug = 1
opt-level = 0
overflow-checks = true

[profile.release]
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.release-lto]
inherits = "release"
lto = "fat"

[dependencies]
tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "net", "time", "fs", "signal", "io-std", "io-util", "sync"] }
tokio-stream = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
reqwest-middleware = "0.3"
reqwest-retry = "0.6"
anyhow = "1.0"
async-stream = "0.3"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "std", "registry", "json"], default-features = false }
# OpenTelemetry for distributed tracing and request correlation
tracing-opentelemetry = "0.23"
opentelemetry = { version = "0.22", features = ["trace"] }
opentelemetry_sdk = { version = "0.22", features = ["trace", "rt-tokio"] }
opentelemetry-stdout = { version = "0.1", features = ["trace"] }
# HTTP tracing middleware
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "request-id"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
bytes = "1.8"
url = "2.5"
clap = { version = "4.5", features = ["derive", "std"], default-features = false }
dotenvy = "0.15"
# toml = "0.8"  # Removed: Environment-only configuration approach
dirs = "5.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
dashmap = "5.5"
urlencoding = "2.1"
sha2 = "0.10"
rand = "0.8"
aes-gcm = "0.10"
# Encryption and database support for multi-tenant
ring = "0.17"
ed25519-dalek = "2.1"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono", "uuid", "derive"], default-features = false }
bcrypt = "0.16"
argon2 = "0.5"
jsonwebtoken = "9.3"
subtle = "2.6"
hex = "0.4"
warp = { version = "0.3", features = ["websocket"], default-features = false }
futures-util = "0.3"
eventsource-stream = "0.2"
# Pin to compatible version to avoid edition2024 requirement
base64ct = "=1.6.0"
# For documentation server
env_logger = "0.11"
# LRU cache for bounded session storage (DoS prevention)
lru = "0.12"
# Glob pattern matching for cache invalidation
glob = "0.3"
# Regex for PII redaction and pattern matching
regex = "1.11"
# Bitflags for PII redaction feature configuration
bitflags = "2.6"
# Cross-platform system information without unsafe FFI
sysinfo = "0.31"
# Redis client with connection pooling and async support
redis = { version = "0.27", features = ["tokio-comp", "connection-manager", "aio"] }

num-traits = "0.2"
rsa = { version = "0.9", features = ["pem"] }
[dev-dependencies]
tempfile = "3.20"
serial_test = "3.1"
rand_chacha = "0.3"
