[package]
name = "pierre-fitness-providers"
version = "0.2.0"
edition = "2021"
license-file = "LICENSE-COMMERCIAL"
description = "Fitness provider implementations (Strava, Garmin, Synthetic)"

[lib]
name = "pierre_fitness_providers"
path = "src/lib.rs"

[features]
default = ["strava", "garmin", "synthetic"]
strava = []
garmin = []
fitbit = []
synthetic = []

[dependencies]
# Generic framework (local dev path)
pierre_mcp_server = { path = ".." }

# Fitness app models and traits (local dev path)
pierre-fitness-app = { path = "../pierre-fitness-app" }

# Provider dependencies
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["rt-multi-thread"] }
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
thiserror = "2.0"
uuid = { version = "1.11", features = ["v4", "serde"] }
base64 = "0.22"
sha2 = "0.10"
urlencoding = "2.1"
