# ABOUTME: Fitness intelligence algorithms, metrics, and analysis engine
# ABOUTME: Extracted from main crate for parallel compilation and modularity

[package]
name = "pierre-intelligence"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Fitness intelligence engine for Pierre platform"
repository = "https://github.com/Async-IO/pierre_mcp_server"
publish = false

[dependencies]
pierre-core = { version = "0.3.0", path = "../pierre-core" }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.11", features = ["v4", "serde"] }
tracing = "0.1"
thiserror = "2.0"
async-trait = "0.1"
rayon = "1.10"

[lints]
workspace = true
