# ABOUTME: Cargo configuration for the FitnessAnalysisAgent example
# ABOUTME: Demonstrates autonomous A2A protocol usage for fitness analysis

[package]
name = "fitness_analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Pierre Team"]
description = "Autonomous fitness analysis agent demonstrating A2A protocol usage"

[[bin]]
name = "fitness_analyzer"
path = "src/main.rs"

[lib]
name = "fitness_analyzer"
path = "src/lib.rs"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client for A2A protocol
reqwest = { version = "0.12", features = ["json"] }

# JSON serialization for A2A JSON-RPC
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Time handling for scheduling
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"

# UUID for request IDs
uuid = { version = "1.0", features = ["v4"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

[dev-dependencies]
# Testing framework
tokio-test = "0.4"
wiremock = "0.5"
tempfile = "3.0"

[profile.release]
# Optimize for size since this is a client agent
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"